add_subdirectory(treecolour)
add_subdirectory(treecreate)
add_subdirectory(treedecimate)
add_subdirectory(treediff)
add_subdirectory(treefoliage)
add_subdirectory(treegrow)
add_subdirectory(treemesh)
add_subdirectory(treeprune)
add_subdirectory(treerotate)
add_subdirectory(treesplit)
add_subdirectory(treetranslate)
