add_subdirectory(treecolour)
add_subdirectory(treecombine)
add_subdirectory(treecreate)
add_subdirectory(treedecimate)
add_subdirectory(treediff)
add_subdirectory(treefoliage)
add_subdirectory(treegrow)
add_subdirectory(treeinfo)
add_subdirectory(treemesh)
add_subdirectory(treepaint)
add_subdirectory(treeprune)
add_subdirectory(treerender)
add_subdirectory(treerotate)
add_subdirectory(treesmooth)
add_subdirectory(treesplit)
add_subdirectory(treetranslate)
